# wisp

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
app/: package-lock.json  package.json  tailwind.config.js
app/src/: App.tsx  AttributePanel.tsx  CharacterSheetBanner.tsx  FileTree.tsx  Node.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
app/src-tauri/src/api/: mod.rs
app/src/components/: Binder.tsx  Node.tsx
app/src/context/: FileTreeContext.tsx
app/src/hooks/: useBinder.tsx  useCreateCharacter.tsx  useDeleteCharacter.tsx  useUploadableImage.tsx
app/src/plugins/: ComponentPickerPlugin.tsx
app/src/rspc/: bindings.ts
app/src/ui/: AttributePanel.tsx  AttributePanelItem.tsx  Banner.tsx  Binder.tsx  CharacterCreationModal.tsx  ContextMenu.tsx  EditableInline.tsx  EditableText.tsx  FamilyTree.tsx  FileTree.tsx  ImageUpload.tsx  Menu.tsx  UploadableImage.tsx  WispBlockEditor.tsx  WispEditor.tsx  useBinder.tsx
apps/app/: .eslintrc.cjs  package.json  tailwind.config.js  vite.config.ts
apps/app/src/: App.tsx  index.css  main.tsx  paths.ts  routeTree.gen.ts
apps/app/src-tauri/: Cargo.toml  tauri.conf.json
apps/app/src-tauri/src/: main.rs
apps/app/src/components/: Breadcrumbs.tsx  CharactersFileTree.tsx  ConfirmationDialog.tsx  CreateCharacterDialog.tsx  CreateLocationDialog.tsx  EntityFileTree.tsx  FactForm.tsx  FactGroupForm.tsx  FactManager.tsx  FactManagerDialog.tsx  FactSheet.tsx  FactSlice.tsx  ImageUploadDialog.tsx  LocationsFileTree.tsx  NotFound.tsx
apps/app/src/components/FileTree/: CharactersFileTree.tsx  FileTreeItemResolver.tsx  WorldBuildingFileTree.tsx
apps/app/src/components/FileTree/items/: CharacterItem.tsx
apps/app/src/hooks/: useClickOutside.tsx  useCreatePanel.ts  useDebouncedPanelTransform.ts  useDebouncedTransform.ts  useDeleteCharacter.ts  useDeletePanel.ts  useEditCharacter.tsx
apps/app/src/panels/: factsheet.tsx  factslice.tsx
apps/app/src/router/: CharacterSheet.tsx
apps/app/src/routes/: __root.tsx  index.tsx  workspace.characters.$characterId.tsx  workspace.characters.tsx  workspace.entity.$entityId.facts.tsx  workspace.entity.$entityId.index.tsx  workspace.entity.$entityId.tsx  workspace.entity.tree.tsx  workspace.index.tsx  workspace.tsx
apps/app/src/rspc/: router.ts
apps/app/src/schema/: fact.ts
apps/app/src/ui/: AttributePanel.tsx  AttributePanelDeprecated.tsx  Banner.tsx  CharacterSummary.tsx  FamilyTree.tsx  PanelGroup.tsx  TraitMenu.tsx  WispEditor.tsx
apps/storybook/: package.json  tailwind.config.js
apps/storybook/.storybook/: main.ts  preview.ts
apps/storybook/stories/: Button.stories.ts  ContextMenu.stories.tsx  DraggableGrid.stories.tsx  FileTree.stories.tsx  Input.stories.tsx  Panel.stories.tsx  PanelCanvas.stories.tsx  SortableGrid.stories.tsx  TableOfContents.stories.tsx  TreeView.stories.tsx
core/: Cargo.toml
core/prisma/: schema.prisma
core/src/: lib.rs  main.rs  seed.rs  tree.rs
core/src/api/: binder.rs  canvas.rs  characters.rs  entity.rs  facts.rs  links.rs  locations.rs  mod.rs  panels.rs  tag.rs  tree.rs
core/src/api/facts/: character.rs  mod.rs
core/src/entity/: mod.rs
core/src/fact/: mod.rs
core/src/seed/: entity.rs  entity_tag.rs  facts.rs  mod.rs  seedable.rs
core/src/tree/: error.rs  family_tree.rs  mod.rs
core/src/tree/family_tree/: builder.rs  mod.rs
