[workspace]
resolver = "2"
members = [
    "core",
		"crates/*",
    "app/src-tauri"
]

[workspace.dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.9", default-features = false, features = ["sqlite", "migrations", "rspc"] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.9", default-features = false, features = ["sqlite", "migrations", "rspc"] }
serde =  {version = "1.0"}
snafu = "0.7.5"
tokio = { version = "1.32.0", features = ["full"] }