[package]
name = "wispcore"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "wisp"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2.0.0"
itertools = "0.11.0"
nanoid = "0.4.0"
prisma-client-rust = {workspace = true}
tokio = {workspace = true}
snafu = {workspace = true}
serde = { workspace = true}
specta = "1.0.0"
