[package]
name = "wispcore"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"


[dependencies]
indexmap = "2.0.0"
itertools = "0.11.0"
nanoid = "0.4.0"
prisma-client-rust = {workspace = true}
serde_json = "1.0"
serde_yaml = "0.9"
tokio = {workspace = true}
snafu = {workspace = true}
serde = { workspace = true}
rspc = { workspace = true }
specta = "1.0.0"
async-trait = "0.1.77"
petgraph = "0.6.4"
