[package]
name = "app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="wispapp"
path="src/lib.rs"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
wispcore = {path = "../../../core" }
tauri = {  version = "=1.5.3", features = [ "protocol-asset", "path-all", "fs-all", "dialog-all"] }
prisma-client-rust = {workspace = true}
serde = { workspace = true }
serde_json = "1.0"
snafu = {workspace = true}
tokio = {workspace = true}
specta = "1.0.0"
tauri-specta = { version = "1.0.0", features = ["typescript"] }
rspc = { workspace = true }
itertools = "0.11.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
